fixed routing of the light/dark mode to the correct areas by adding an if statement to check which page the user is already on and route accordingly

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,9 +56,3 @@
     display: inline-block;
 }
 
-.modeToggle {
-    margin: 0;
-    padding: 0;
-    border: none;
-    background-color: transparent;
-}
